--- a/source/scss/blocks/review.scss
+++ b/source/scss/blocks/review.scss
@@ -68,6 +68,10 @@
   height: 95px;
   background-color: $grey100;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   &:not(:last-child) {
     margin-right: 20px;
   }
