--- a/source/scss/components/tabs.scss
+++ b/source/scss/components/tabs.scss
@@ -23,8 +23,40 @@
   }
 }
 
+.filter-tabs {
+  margin: 0 0 40px;
+}
+
+.filter-tab {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: $main-text;
+  padding: 8px 16px;
+  border-radius: 33px;
+  background-color: $grey100;
+  width: max-content;
+  transition: color 0.2s, background-color 0.2s;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $primary;
+    color: #fff;
+  }
+
+  &.active {
+    background-color: $main-text;
+    color: #fff;
+  }
+
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
+}
+
 @include mobile {
-  .tab {
+  .tab,
+  .filter-tab {
     &:first-child {
       margin-left: 16px;
     }
@@ -34,7 +66,8 @@
     }
   }
 
-  .tabs {
+  .tabs,
+  .filter-tabs {
     margin: 0 0 24px;
   }
 }
