--- a/source/scss/blocks/history.scss
+++ b/source/scss/blocks/history.scss
@@ -96,6 +96,10 @@
     padding: 40px 32px;
   }
 
+  .history__promo-logo {
+    margin: 0 0 40px;
+  }
+
   .history__date {
     flex-direction: column;
   }
