--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -25,7 +25,7 @@
         rgba(150, 0, 0, 0.3) 3.85%,
         rgba(189, 13, 13, 0) 49.77%
       ),
-      no-repeat top 50% right -40px / cover url('../img/promo-bg.jpg');
+      no-repeat top 50% right 0 / cover url('../img/promo-bg.jpg');
   }
 
   .promo__title {
