--- a/source/scss/blocks/series.scss
+++ b/source/scss/blocks/series.scss
@@ -1,6 +1,6 @@
-.series__part {
-  display: none;
-}
+// .series__part {
+//   display: none;
+// }
 
 @include mobile {
   .series__tabs-container {
