--- a/source/scss/blocks/history.scss
+++ b/source/scss/blocks/history.scss
@@ -56,8 +56,10 @@
 }
 
 .history__date-year {
-  width: 100px;
-  margin-right: 80px;
+  display: block;
+  width: 150px;
+  margin-right: 30px;
+
   flex-shrink: 0;
   font-weight: 600;
   font-size: 32px;
@@ -106,6 +108,7 @@
 
   .history__date-year {
     margin: 0 0 24px;
+    width: auto;
   }
 
   .history__date-img-block {
