--- a/css/style.css
+++ b/css/style.css
@@ -5169,8 +5169,9 @@ section {
   border-bottom: 1px solid #eeeeee; }
 
 .history__date-year {
-  width: 100px;
-  margin-right: 80px;
+  display: block;
+  width: 150px;
+  margin-right: 30px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
   font-weight: 600;
@@ -5214,7 +5215,8 @@ section {
         -ms-flex-direction: column;
             flex-direction: column; }
   .history__date-year {
-    margin: 0 0 24px; }
+    margin: 0 0 24px;
+    width: auto; }
   .history__date-img-block {
     margin: 0 0 24px; } }
 
