--- a/source/scss/blocks/promo.scss
+++ b/source/scss/blocks/promo.scss
@@ -5,7 +5,7 @@
       rgba(132, 1, 1, 0.3) 3.85%,
       rgba(189, 13, 13, 0) 49.77%
     ),
-    no-repeat top calc(50% + 55px) left 50% / cover url('../img/promo-bg.jpg');
+    no-repeat center / cover url('../img/promo-bg-new.jpg');
 }
 
 .promo__title {
@@ -25,7 +25,7 @@
         rgba(150, 0, 0, 0.3) 3.85%,
         rgba(189, 13, 13, 0) 49.77%
       ),
-      no-repeat top 50% right 0 / cover url('../img/promo-bg.jpg');
+      no-repeat center / cover url('../img/promo-bg-new.jpg');
   }
 
   .promo__title {
@@ -41,7 +41,7 @@
         rgba(150, 0, 0, 0.3) 3.85%,
         rgba(189, 13, 13, 0) 49.77%
       ),
-      no-repeat top 50% right 0 / cover url('../img/promo-bg.jpg');
+      no-repeat center / cover url('../img/promo-bg-new.jpg');
   }
 
   .promo__title {
@@ -63,6 +63,6 @@
         rgba(150, 0, 0, 0.3) 3.85%,
         rgba(189, 13, 13, 0) 49.77%
       ),
-      no-repeat top 50% right -30px / cover url('../img/promo-bg.jpg');
+      no-repeat center / cover url('../img/promo-bg-new.jpg');
   }
 }
