--- a/css/style.css
+++ b/css/style.css
@@ -5700,8 +5700,8 @@ section {
 
 .promo__block {
   padding: 60px;
-  background: -o-linear-gradient(354.92deg, rgba(132, 1, 1, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top calc(50% + 55px) left 50%/cover url("../img/promo-bg.jpg");
-  background: linear-gradient(95.08deg, rgba(132, 1, 1, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top calc(50% + 55px) left 50%/cover url("../img/promo-bg.jpg"); }
+  background: -o-linear-gradient(354.92deg, rgba(132, 1, 1, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg");
+  background: linear-gradient(95.08deg, rgba(132, 1, 1, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg"); }
 
 .promo__title {
   font-weight: 600;
@@ -5714,16 +5714,16 @@ section {
 @media (max-width: 1279px) {
   .promo__block {
     padding: 32px;
-    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right 0/cover url("../img/promo-bg.jpg");
-    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right 0/cover url("../img/promo-bg.jpg"); }
+    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg");
+    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg"); }
   .promo__title {
     margin: 0 0 427px; } }
 
 @media (max-width: 767px) {
   .promo__block {
     padding: 16px;
-    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right 0/cover url("../img/promo-bg.jpg");
-    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right 0/cover url("../img/promo-bg.jpg"); }
+    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg");
+    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg"); }
   .promo__title {
     font-size: 24px;
     line-height: 29px;
@@ -5734,8 +5734,8 @@ section {
 
 @media (max-width: 600px) {
   .promo__block {
-    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right -30px/cover url("../img/promo-bg.jpg");
-    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat top 50% right -30px/cover url("../img/promo-bg.jpg"); } }
+    background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg");
+    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg"); } }
 
 .quality__content {
   display: -webkit-box;
