--- a/source/scss/blocks/innovation.scss
+++ b/source/scss/blocks/innovation.scss
@@ -1,6 +1,6 @@
 .innovation__promo {
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   padding: 60px;
   margin: 0 0 80px;
   background: no-repeat center/cover url('../img/innovation-bg.jpg');
@@ -85,7 +85,7 @@
 
 @include tablet {
   .innovation__promo {
-    height: 460px;
+    min-height: 460px;
     padding: 40px 32px;
   }
 
@@ -101,7 +101,7 @@
 
 @include mobile {
   .innovation__promo {
-    height: 400px;
+    min-height: 400px;
     padding: 24px 16px;
     margin: 0 0 40px;
   }
