--- a/source/scss/blocks/philosophy.scss
+++ b/source/scss/blocks/philosophy.scss
@@ -1,6 +1,6 @@
 .philosophy__promo {
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   padding: 60px;
   margin: 0 0 80px;
   background: linear-gradient(
@@ -140,7 +140,7 @@
 
 @include tablet {
   .philosophy__promo {
-    height: 460px;
+    min-height: 460px;
     padding: 40px 32px;
     background: linear-gradient(
         142.15deg,
@@ -175,7 +175,7 @@
 
 @include mobile {
   .philosophy__promo {
-    height: 400px;
+    min-height: 400px;
     padding: 24px 16px;
     margin: 0 0 40px;
   }
