--- a/css/style.css
+++ b/css/style.css
@@ -4745,6 +4745,14 @@ section {
 .for-partners__promo {
   padding: 60px;
   margin: 0 0 100px;
+  min-height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background: -o-linear-gradient(319.35deg, rgba(0, 0, 0, 0.8) 11.29%, rgba(0, 0, 0, 0) 72.26%), no-repeat center/cover url("../img/for-partners-bg.jpg");
   background: linear-gradient(130.65deg, rgba(0, 0, 0, 0.8) 11.29%, rgba(0, 0, 0, 0) 72.26%), no-repeat center/cover url("../img/for-partners-bg.jpg"); }
 
@@ -4753,8 +4761,13 @@ section {
   font-size: 46px;
   line-height: 55px;
   color: #fff;
-  margin: 0 0 90px;
+  margin: 0 0 24px;
   max-width: 550px; }
+
+.for-partners__partnership {
+  margin-top: auto;
+  -ms-flex-item-align: start;
+      align-self: flex-start; }
 
 .for-partners__statistics {
   display: -webkit-box;
@@ -4907,12 +4920,12 @@ section {
   .for-partners__promo {
     padding: 24px 16px 16px;
     margin: 0 0 40px;
+    min-height: 345px;
     background: -o-linear-gradient(273.92deg, rgba(0, 0, 0, 0.8) 5.97%, rgba(0, 0, 0, 0) 101.58%), no-repeat center/cover url("../img/for-partners-bg.jpg");
     background: linear-gradient(176.08deg, rgba(0, 0, 0, 0.8) 5.97%, rgba(0, 0, 0, 0) 101.58%), no-repeat center/cover url("../img/for-partners-bg.jpg"); }
   .for-partners__promo-title {
     font-size: 24px;
-    line-height: 29px;
-    margin: 0 0 194px; }
+    line-height: 29px; }
   .for-partners__statistics {
     margin: 0 0 40px;
     margin-top: 0; }
@@ -5123,7 +5136,7 @@ section {
 
 .history__promo {
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   padding: 60px;
   margin: 0 0 80px;
   background: -o-linear-gradient(307.85deg, rgba(0, 0, 0, 0.4) 5.85%, rgba(0, 0, 0, 0) 75.3%), no-repeat center/cover url("../img/history-bg.jpg");
@@ -5205,7 +5218,7 @@ section {
 
 @media (max-width: 1279px) {
   .history__promo {
-    height: 460px;
+    min-height: 460px;
     padding: 40px 32px; }
   .history__promo-logo {
     margin: 0 0 40px; }
@@ -5222,7 +5235,7 @@ section {
 
 @media (max-width: 767px) {
   .history__promo {
-    height: 400px;
+    min-height: 400px;
     padding: 24px 16px;
     margin: 0 0 40px; }
   .history__promo-logo {
@@ -5258,7 +5271,7 @@ section {
 
 .innovation__promo {
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   padding: 60px;
   margin: 0 0 80px;
   background: no-repeat center/cover url("../img/innovation-bg.jpg"); }
@@ -5334,7 +5347,7 @@ section {
 
 @media (max-width: 1279px) {
   .innovation__promo {
-    height: 460px;
+    min-height: 460px;
     padding: 40px 32px; }
   .innovation__item {
     padding: 32px 0;
@@ -5347,7 +5360,7 @@ section {
 
 @media (max-width: 767px) {
   .innovation__promo {
-    height: 400px;
+    min-height: 400px;
     padding: 24px 16px;
     margin: 0 0 40px; }
   .innovation__promo-logo {
@@ -5525,7 +5538,7 @@ section {
 
 .philosophy__promo {
   width: 100%;
-  height: 500px;
+  min-height: 500px;
   padding: 60px;
   margin: 0 0 80px;
   background: -o-linear-gradient(307.85deg, rgba(0, 0, 0, 0.4) 5.85%, rgba(0, 0, 0, 0) 75.3%), no-repeat top calc(50% + 60px) center/cover url("../img/philosophy-bg.jpg");
@@ -5636,7 +5649,7 @@ section {
 
 @media (max-width: 1279px) {
   .philosophy__promo {
-    height: 460px;
+    min-height: 460px;
     padding: 40px 32px;
     background: -o-linear-gradient(307.85deg, rgba(0, 0, 0, 0.4) 5.85%, rgba(0, 0, 0, 0) 75.3%), no-repeat center/cover url("../img/philosophy-bg.jpg");
     background: linear-gradient(142.15deg, rgba(0, 0, 0, 0.4) 5.85%, rgba(0, 0, 0, 0) 75.3%), no-repeat center/cover url("../img/philosophy-bg.jpg"); }
@@ -5655,7 +5668,7 @@ section {
 
 @media (max-width: 767px) {
   .philosophy__promo {
-    height: 400px;
+    min-height: 400px;
     padding: 24px 16px;
     margin: 0 0 40px; }
   .philosophy__promo-logo {
@@ -5700,6 +5713,14 @@ section {
 
 .promo__block {
   padding: 60px;
+  min-height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background: -o-linear-gradient(354.92deg, rgba(132, 1, 1, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg");
   background: linear-gradient(95.08deg, rgba(132, 1, 1, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg"); }
 
@@ -5708,26 +5729,30 @@ section {
   font-size: 46px;
   line-height: 55px;
   color: #fff;
-  margin: 0 0 144px;
+  margin: 0 0 24px;
   max-width: 550px; }
+
+.promo__more-link {
+  margin-top: auto;
+  -ms-flex-item-align: start;
+      align-self: flex-start; }
 
 @media (max-width: 1279px) {
   .promo__block {
     padding: 32px;
+    min-height: 727px;
     background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg");
-    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg"); }
-  .promo__title {
-    margin: 0 0 427px; } }
+    background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg"); } }
 
 @media (max-width: 767px) {
   .promo__block {
     padding: 16px;
+    min-height: 400px;
     background: -o-linear-gradient(354.92deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg");
     background: linear-gradient(95.08deg, rgba(150, 0, 0, 0.3) 3.85%, rgba(189, 13, 13, 0) 49.77%), no-repeat center/cover url("../img/promo-bg-new.jpg"); }
   .promo__title {
     font-size: 24px;
     line-height: 29px;
-    margin: 0 0 271px;
     max-width: 260px; }
   .promo__more-link {
     width: 100%; } }
