--- a/css/style.css
+++ b/css/style.css
@@ -4224,7 +4224,11 @@ section {
 .category__promo-img {
   position: absolute;
   top: 70px;
-  right: 180px; }
+  right: 100px;
+  width: 500px;
+  height: 340px;
+  -o-object-fit: contain;
+     object-fit: contain; }
   .category__promo-img.rac {
     top: 142px;
     right: 91px;
@@ -4367,7 +4371,10 @@ section {
       top: 77px;
       right: 144px; }
   .category__promo-img {
-    right: 115px; }
+    top: 80px;
+    right: 86px;
+    width: 400px;
+    height: 290px; }
     .category__promo-img.rac {
       width: 438px;
       height: 195px;
@@ -4438,7 +4445,8 @@ section {
     .category__promo.cac {
       padding-top: 230px; }
   .category__promo-img {
-    width: 130px;
+    width: 180px;
+    height: 130px;
     top: 50px; }
     .category__promo-img.rac {
       width: 204px;
