--- a/source/scss/components/modal.scss
+++ b/source/scss/components/modal.scss
@@ -126,3 +126,117 @@
     background-color: #fff;
   }
 }
+
+.modal--fixed {
+  .modal__body {
+    position: relative;
+    padding: 0;
+
+    @include mobile {
+      position: absolute;
+    }
+  }
+
+  .modal__desc {
+    margin-bottom: 0;
+
+    & + * {
+      margin-top: 16px;
+    }
+  }
+
+  .modal__close-btn {
+    margin-top: 0;
+    right: 16px;
+  }
+
+  .modal__header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 23px 40px 20px;
+    background-color: #fff;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+
+    @include mobile {
+      position: fixed;
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+  }
+
+  .modal__content {
+    padding: 112px 40px 40px;
+    height: 740px;
+    overflow-y: auto;
+
+    @include mobile {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+
+    .modal__title-small {
+      margin: 0 0 24px;
+    }
+  }
+
+  a {
+    color: inherit;
+    text-decoration: underline;
+  }
+}
+
+.modal__title-small {
+  font-size: 24px;
+  line-height: 120%;
+  margin: 0;
+
+  @include mobile {
+    font-size: 20px;
+  }
+}
+
+.modal__subtitle {
+  font-size: 20px;
+  line-height: 120%;
+  margin: 0 0 16px;
+
+  @include mobile {
+    font-size: 18px;
+  }
+}
+
+.modal__part-title {
+  font-size: 16px;
+  line-height: 120%;
+  margin: 0 0 16px;
+
+  @include mobile {
+    font-size: 14px;
+  }
+}
+
+.modal__list-block {
+  & + * {
+    margin-top: 24px;
+  }
+
+  ul {
+    margin: 0;
+    padding-left: 20px;
+  }
+
+  li {
+    font-size: 14px;
+    line-height: 150%;
+
+    &:not(:last-child) {
+      margin-bottom: 21px;
+    }
+  }
+}
+
+.modal__content-part {
+  margin-bottom: 40px;
+}
