--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -2,6 +2,7 @@
 @import '../../node_modules/swiper/swiper-bundle';
 @import '../../node_modules/jquery-ui-bundle/jquery-ui';
 @import '../../node_modules/select2/dist/css/select2';
+@import '../../node_modules/perfect-scrollbar/css/perfect-scrollbar';
 
 //Global
 @import 'global/variables.scss';
